Update README and some code comments
- Added an explanation of "motivation" to the README
- Added a couple folder ignore lines to the gitignore
- Added some numpy-style comment blocks to phenotype.py

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ ds*/
 phenotype/
 */sub-*/phenotype/*.tsv
 */sub-*/ses-*/phenotype/*.tsv
+aggregated_*/
+segregated_*/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
